[tool.poetry]
name = "belka"
version = "0.1.0"
description = "kaggle competition"
authors = ["Mike Mull <mike.mull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"
rdkit = "^2023.9.6"
scikit-learn = "^1.4.2"
chemprop = "^2.0.0"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
