[tool.poetry]
name = "belka"
version = "0.1.0"
description = "kaggle competition"
authors = ["Mike Mull <mike.mull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
rdkit = "^2023.9.6"
scikit-learn = "^1.4.2"
chemprop = "^2.0.0"
psutil = "^5.9.8"
polars = "^0.20.31"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
